css/heroic-features.css
/*!
 * Start Bootstrap - Heroic Features (https://startbootstrap.com/template-overviews/heroic-features)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-heroic-features/blob/master/LICENSE)
 */

b {
  font-weight: bold;
}

body {
  font-family: 'Lato', sans-serif;
  background-image: url("/img/11822.jpg");
}

.display-2 {
  font-size: 1rem !important;
  font-weight: bold;
}

.display-3 {
  font-size: 2rem !important;
  font-weight: bold;
}

.top {
  /* padding-top: .05%; */
  padding-bottom: 5%;
}

.btn-fb {
  padding: 10px 0px 25px;
  display: inline-block;
  margin-right: 5px;
}

.space-top{
  padding-top: 30px;
}

.skill-bar {
    box-sizing: border-box;
    font-weight: 300;
    line-height: 36px;
}

.skill-bar span {
  display: inline-block;
  font-weight: bold;
  width: 50px;
}

.skill-level {
  display: inline-block;
}

.yes {
  display: inline-block;
}

.yes i{
  color: #0d0d0d;
}

.no {
  display: inline-block;
  width: 15px;
  height: 15px;
  margin-top: 10px;
  margin-right: 2px;
}

.no i {
  color: #5599cb;
}

@media screen and (max-width: 799px) {
  .display-3 {
    font-size: 1.2rem !important;
  }

  .display-2 {
    font-size: 1rem !important;
    font-weight: bold;
  }

  .top {
    padding-top: 15%;
  }
}

.jumbotron {
  background: white !important;
  padding-left: 0px;
  padding-top: 10%;
  padding-bottom: 5%;
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.text_left {
  text-align: left;
}

.card-title {
  font-size: 1.3rem;
}

.lead {
  font-size: 1.2rem;
}

